<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Kediri</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\Truth goes unarmed, but i shall carry a spear</string>
    <string name="button_share">Share This Text</string>

</resources>